fixed resume text overflow (?)

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -177,12 +177,15 @@ body {
     background-color:white;
     align-content: center;
     justify-content: center;
-    height:10vw;
+    height:200px;
 }
 
 .resume-content {
     overflow-x: hidden !important;
-    max-height:70vh;
+    height:65vh;
+    min-height:100px;
+    max-height:700px;
+
     overflow-y:scroll;
     font-size:24px;
 }
